--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -31,6 +31,7 @@
         android:paddingVertical="12dp"
         android:paddingHorizontal="16dp"
         android:textSize="14sp"
+        android:textAllCaps="false"
         android:ellipsize="end"
         android:singleLine="true"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,12 +44,13 @@
         android:id="@+id/button_ordered"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/tab_ordered_products"
+        android:text="Orders"
         android:backgroundTint="@color/button_color"
         android:textColor="@color/button_text_color"
         android:contentDescription="@string/desc_ordered_products"
         android:paddingVertical="12dp"
         android:paddingHorizontal="16dp"
+        android:textAllCaps="false"
         android:textSize="14sp"
         android:ellipsize="end"
         android:singleLine="true"
