--- a/app/src/main/res/layout/activity_services_recommend.xml
+++ b/app/src/main/res/layout/activity_services_recommend.xml
@@ -189,4 +189,21 @@
 
     </ScrollView>
 
+    <FrameLayout
+        android:id="@+id/progress_bar_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@android:color/white"
+        android:alpha="0.5"
+        >
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+    </FrameLayout>
+
 </LinearLayout>
