--- a/app/src/main/res/layout/item_combined_service.xml
+++ b/app/src/main/res/layout/item_combined_service.xml
@@ -28,6 +28,7 @@
         android:id="@+id/serviceKind"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:textSize="14sp"
         android:layout_marginTop="4dp"/>
 
@@ -35,6 +36,7 @@
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/wallet_holo_blue_light"
         android:textSize="14sp"
         android:layout_marginTop="4dp"/>
 </LinearLayout>
