--- a/app/src/main/res/layout/activity_delivery_info.xml
+++ b/app/src/main/res/layout/activity_delivery_info.xml
@@ -1,165 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
 
-    android:background="@color/white">
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <!-- Toolbar -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:titleTextColor="@android:color/black"
-        app:title="Shipping Information"
-        app:navigationIcon="@drawable/ic_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:elevation="4dp" />
-
-    <!-- Full Name Input Field -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_full_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Your Full Name"
-            android:textColorHint="@color/grey"
-            android:imeOptions="actionNext"
-            android:textColor="@color/primary_text"
-            android:backgroundTint="@color/primary_light"
-            android:padding="16dp"
-            android:textSize="16sp"
-            android:inputType="textPersonName" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!-- Shipping Method RadioGroup -->
-    <RadioGroup
-        android:id="@+id/radio_group_shipping"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/input_full_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp">
-
-        <RadioButton
-            android:id="@+id/rb_pickup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pick-Up"
-            android:textColor="@color/primary_text"
-            android:paddingEnd="16dp" />
-
-        <RadioButton
-            android:id="@+id/rb_delivery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Delivery"
-            android:textColor="@color/primary_text" />
-    </RadioGroup>
-
-    <!-- Delivery Address Input Field -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_delivery_address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/radio_group_shipping"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_delivery_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Delivery Address"
-            android:textColorHint="@color/grey"
-            android:textColor="@color/primary_text"
-            android:backgroundTint="@color/primary_light"
-            android:imeOptions="actionNext"
-            android:padding="16dp"
-            android:textSize="16sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!-- Contact Number Input Field -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_contact_number"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/input_delivery_address"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="16dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_contact_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Contact Number"
-            android:inputType="phone"
-            android:textColorHint="@color/grey"
-            android:imeOptions="actionNext"
-            android:textColor="@color/primary_text"
-            android:backgroundTint="@color/primary_light"
-            android:padding="16dp"
-            android:textSize="16sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!-- Zip Code Input Field -->
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_zip_code"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/input_contact_number"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_zip_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter Zip Code"
-            android:inputType="number"
-            android:textColorHint="@color/grey"
-            android:textColor="@color/primary_text"
-            android:backgroundTint="@color/primary_light"
-            android:imeOptions="actionNext"
-            android:padding="16dp"
-            android:textSize="16sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <!-- Proceed to Payment Button -->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_payment"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Proceed to Payment"
-        android:textColor="@android:color/black"
-        android:background="@drawable/border"
-        android:textSize="16sp"
-        android:layout_marginTop="32dp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/input_zip_code"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
