--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -51,6 +51,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:elevation="4dp"
+                    android:background="@drawable/add_tocart_border"
                     android:orientation="vertical"
                     android:padding="16dp">
 
@@ -159,7 +161,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
+                    android:padding="16dp"
+                    android:background="@drawable/add_tocart_border"
+                    android:elevation="4dp"
                     android:orientation="vertical">
 
                     <!-- Payment Info -->
