--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -44,7 +44,7 @@
                 android:text="Total: ₱0.00"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@android:color/holo_red_dark"
                 android:layout_marginBottom="10dp" />
 
             <!-- Delivery Option -->
