--- a/app/src/main/res/layout/fragment_ordered_products.xml
+++ b/app/src/main/res/layout/fragment_ordered_products.xml
@@ -7,26 +7,45 @@
     android:background="@drawable/add_tocart_border"
     android:clipToPadding="false">
 
-    <!-- Header Section with Title -->
-    <TextView
-        android:id="@+id/cartTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Ordered Products"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="#2F4F4F"
-        android:layout_marginBottom="16dp"
-        android:layout_gravity="center_horizontal"/>
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="16dp">
 
-    <!-- Divider Line -->
+        <TextView
+            android:id="@+id/cartTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Your Orders"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#2F4F4F"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:layout_weight="1" />
+
+        <ImageView
+            android:id="@+id/spinner_category"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/filter_category"
+            android:contentDescription="Category Icon"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/rounded_bg"
+            android:elevation="8dp"
+            android:padding="12dp"
+            android:layout_gravity="center_vertical" />
+
+    </LinearLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         android:layout_marginBottom="16dp" />
 
-    <!-- RecyclerView for displaying cart items -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_ordered"
         android:layout_width="match_parent"
@@ -35,7 +54,6 @@
         android:clipToPadding="false"
         android:paddingBottom="16dp"
         android:overScrollMode="never"
-        android:scrollbars="vertical"
-       />
+        android:scrollbars="vertical" />
 
 </LinearLayout>
