--- a/app/src/main/res/layout/activity_manage_order_detail.xml
+++ b/app/src/main/res/layout/activity_manage_order_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:cardview="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@android:color/background_light">
 
@@ -23,14 +24,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Wrapper LinearLayout to hold multiple views -->
+        <!-- Wrapper LinearLayout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- CardView for displaying order details -->
+            <!-- Product Image -->
+            <ImageView
+                android:id="@+id/product_image"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:layout_marginBottom="16dp"
+                android:contentDescription="@string/product_image_desc" />
+
+            <!-- Product Details Card -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,35 +49,23 @@
                 cardview:cardElevation="4dp"
                 android:backgroundTint="#FFFFFF">
 
-                <!-- Inner LinearLayout for vertical arrangement of views -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:background="@drawable/add_tocart_border">
 
-                    <!-- Product Image -->
-                    <ImageView
-                        android:id="@+id/product_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_gravity="center"
-                        android:scaleType="centerCrop"
-                        android:layout_marginBottom="16dp"
-                        android:contentDescription="@string/product_image_desc" />
-
-                    <!-- Product Name -->
                     <TextView
                         android:id="@+id/product_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Product Name"
                         android:textSize="18sp"
-                        android:layout_marginTop="16dp"
                         android:textStyle="bold"
-                        android:textColor="#212121" />
+                        android:textColor="#212121"
+                        android:layout_marginTop="16dp" />
 
-                    <!-- Quantity -->
                     <TextView
                         android:id="@+id/quantity"
                         android:layout_width="wrap_content"
@@ -77,7 +75,6 @@
                         android:textColor="#757575"
                         android:layout_marginTop="8dp" />
 
-                    <!-- Total Price -->
                     <TextView
                         android:id="@+id/total_price"
                         android:layout_width="wrap_content"
@@ -94,19 +91,17 @@
                         android:text="Brand: "
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
-                        android:layout_marginTop="4dp"/>
+                        android:layout_marginTop="4dp" />
 
                     <TextView
                         android:id="@+id/product_year"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Brand: "
+                        android:text="Year: "
                         android:textSize="16sp"
                         android:textColor="@android:color/black"
-                        android:layout_marginTop="4dp"/>
+                        android:layout_marginTop="4dp" />
 
-
-                    <!-- Order Status -->
                     <TextView
                         android:id="@+id/order_status"
                         android:layout_width="wrap_content"
@@ -116,7 +111,6 @@
                         android:textColor="@android:color/holo_green_dark"
                         android:layout_marginTop="8dp" />
 
-                    <!-- Delivery Option -->
                     <TextView
                         android:id="@+id/delivery_option"
                         android:layout_width="wrap_content"
@@ -125,13 +119,10 @@
                         android:textSize="16sp"
                         android:textColor="#757575"
                         android:layout_marginTop="8dp" />
-
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
 
-            <!-- CardView for Customer Information -->
+            <!-- Customer Info Card -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/customer_info_card"
                 android:layout_width="match_parent"
@@ -141,14 +132,14 @@
                 cardview:cardElevation="4dp"
                 android:backgroundTint="#FFFFFF">
 
-                <!-- Inner LinearLayout for customer info -->
                 <LinearLayout
+                    android:id="@+id/customer_info_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
+                    android:background="@drawable/add_tocart_border"
                     android:orientation="vertical"
-                    android:visibility="gone"
-                    android:id="@+id/customer_info_layout">
+                    android:padding="16dp"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/cutomerLabel"
@@ -159,12 +150,11 @@
                         android:textSize="18sp"
                         android:textColor="#212121" />
 
-
                     <TextView
                         android:id="@+id/customer_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Email: "
+                        android:text="Email:"
                         android:textSize="16sp"
                         android:textColor="#212121"
                         android:layout_marginTop="10dp" />
@@ -173,7 +163,7 @@
                         android:id="@+id/customer_full_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Full Name: "
+                        android:text="Full Name:"
                         android:textSize="16sp"
                         android:textColor="#212121"
                         android:layout_marginTop="8dp" />
@@ -182,7 +172,7 @@
                         android:id="@+id/customer_phone_number"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Phone Number: "
+                        android:text="Phone Number:"
                         android:textSize="16sp"
                         android:textColor="#212121"
                         android:layout_marginTop="8dp" />
@@ -191,7 +181,7 @@
                         android:id="@+id/customer_rider_message"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Rider Message: "
+                        android:text="Rider Message:"
                         android:textSize="16sp"
                         android:textColor="#212121"
                         android:layout_marginTop="8dp" />
@@ -200,16 +190,14 @@
                         android:id="@+id/customer_zip_code"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Zip Code: "
+                        android:text="Zip Code:"
                         android:textSize="16sp"
                         android:textColor="#212121"
                         android:layout_marginTop="8dp" />
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
 
-            <!-- CardView for Payment Details -->
+            <!-- Payment Info Card -->
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -218,14 +206,14 @@
                 cardview:cardElevation="4dp"
                 android:backgroundTint="#FFFFFF">
 
-                <!-- Inner LinearLayout for payment info -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="16dp"
+                    android:background="@drawable/add_tocart_border"
+                    android:elevation="4dp"
                     android:orientation="vertical">
 
-                    <!-- Payment Info Text -->
                     <TextView
                         android:id="@+id/tv_payment_info"
                         android:layout_width="match_parent"
@@ -242,17 +230,14 @@
                         android:layout_height="wrap_content"
                         android:text="Payment Status"
                         android:textSize="16sp"
-                        android:textColor="#757575"
-                       />
+                        android:textColor="#757575" />
 
-                    <!-- Horizontal Layout for Receipt URL -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:paddingTop="8dp">
 
-                        <!-- Receipt URL Label -->
                         <TextView
                             android:id="@+id/tv_receipt_label"
                             android:layout_width="wrap_content"
@@ -262,7 +247,6 @@
                             android:textColor="#757575"
                             android:layout_marginEnd="8dp" />
 
-                        <!-- Payment Details Link -->
                         <TextView
                             android:id="@+id/payment_details"
                             android:layout_width="wrap_content"
@@ -272,15 +256,10 @@
                             android:textColor="#212121"
                             android:autoLink="web"
                             android:linksClickable="true" />
-
                     </LinearLayout>
-
                 </LinearLayout>
-
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-
     </ScrollView>
-
 </LinearLayout>
