--- a/app/src/main/res/layout/activity_manage_order_detail.xml
+++ b/app/src/main/res/layout/activity_manage_order_detail.xml
@@ -36,6 +36,7 @@
                 android:id="@+id/product_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:background="@drawable/add_tocart_border"
                 android:scaleType="centerCrop"
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/product_image_desc" />
