--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/iv_product_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:background="@drawable/add_tocart_border"
                 android:scaleType="centerCrop"
                 android:layout_marginBottom="16dp"
                 android:contentDescription="@string/product_image_desc" />
