--- a/app/src/main/res/layout/activity_proceed_to_authentication.xml
+++ b/app/src/main/res/layout/activity_proceed_to_authentication.xml
@@ -34,8 +34,8 @@
             <!-- Seller Photo -->
             <ImageView
                 android:id="@+id/ivSellerPhoto"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginBottom="8dp"
                 android:padding="10dp"
                 android:background="@drawable/add_tocart_border"
@@ -53,8 +53,8 @@
             <!-- Seller ID -->
             <ImageView
                 android:id="@+id/ivSellerID"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:layout_marginBottom="8dp"
                 android:padding="10dp"
                 android:scaleType="centerCrop"
@@ -83,4 +83,21 @@
                 android:layout_marginTop="16dp" />
         </LinearLayout>
     </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/progress_bar_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@android:color/white"
+        android:alpha="0.5"
+       >
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+    </FrameLayout>
 </LinearLayout>
