--- a/app/src/main/res/layout/chat_message_sender_item.xml
+++ b/app/src/main/res/layout/chat_message_sender_item.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:gravity="end">
 
+    <!-- Message and User Info Layout -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
@@ -13,15 +15,27 @@
         android:paddingEnd="10dp"
         android:gravity="end">
 
+        <!-- User's Name (Full Name or Shop Name) -->
         <TextView
-            android:id="@+id/tv_message_sender"
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User Name"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"/>
+
+        <!-- Message Content -->
+        <TextView
+            android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Message content"
             android:textSize="16sp" />
 
+        <!-- Timestamp -->
         <TextView
-            android:id="@+id/tv_timestamp_sender"
+            android:id="@+id/tv_timestamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Timestamp"
@@ -29,11 +43,20 @@
             android:textColor="@android:color/darker_gray" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/profile_image_sender"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_image_placeholder" />
+    <!-- Profile Image -->
+    <androidx.cardview.widget.CardView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="12dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="100dp">
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/gear"/>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
