--- a/app/src/main/res/layout/fragment_local_shops.xml
+++ b/app/src/main/res/layout/fragment_local_shops.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_height="match_parent">
 
-    <!-- RecyclerView for displaying local shops -->
+    <!-- RecyclerView inside SwipeRefreshLayout -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewLocalShops"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
