--- a/app/src/main/res/layout/fragment_me_buyer.xml
+++ b/app/src/main/res/layout/fragment_me_buyer.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MeFragmentBuyer">
 
     <!-- ScrollView to make content scrollable -->
@@ -35,17 +36,6 @@
                     android:scaleType="centerCrop"/>
             </androidx.cardview.widget.CardView>
 
-            <!-- Upload Button -->
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/uploadButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border"
-                android:text="Upload"
-                android:layout_gravity="center"
-                android:layout_marginTop="8dp"/>
-
-            <!-- User Name -->
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
